--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -56,7 +56,7 @@ section{
 
 .image:hover {
         background-color: $cyan;
-        background-image: url("https://github.com/simplyJC/nft-preview-card-component-main/blob/master/images/icon-view.svg");
+        background-image: url("https://raw.githubusercontent.com/simplyJC/nft-preview-card-component-main/a8dafad0bee3bdbc0253054d6575f5d39c67c067/images/icon-view.svg");
         background-position: center;
         background-repeat: no-repeat;   
         border-radius: .5rem;
