--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -31,41 +31,63 @@ section {
   color: #8bacda;
   border-radius: 1rem;
   padding: 1rem;
+  -webkit-box-shadow: 0px 0px 30px #111111;
+          box-shadow: 0px 0px 30px #111111;
 }
 
-.card img {
+.image-container {
+  position: relative;
   width: 100%;
-  border-radius: .5rem;
-  margin: auto;
+}
+
+.image_img {
+  display: block;
+  width: 100%;
+  border-radius: 1rem;
+}
+
+.image--overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 255, 247, 0.5);
+  opacity: 0;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 1rem;
 }
 
-.image:hover {
-  background-image: url("/images/icon-view.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  border-radius: .5rem;
-  background-color: #00fff7;
+.image--overlay:hover {
+  opacity: 1;
 }
 
-img:hover {
-  opacity: 0.5;
-}
-
-.title {
+h1 {
   padding: 1rem 0;
 }
 
-.title a {
+h1 a {
   color: white;
   padding: 1rem 0;
   font-weight: 700;
   text-decoration: none;
 }
 
-.title a:hover {
+h1 a:hover {
   color: #00fff7;
 }
 
@@ -143,7 +165,7 @@ img:hover {
 }
 
 .avatar {
-  border: 1px solid #cfd8dc;
+  border: 2px solid #cfd8dc;
   border-radius: 5rem;
 }
 
@@ -159,9 +181,10 @@ p {
   font-size: 11px;
   text-align: center;
   padding: 1rem 0;
+  color: #8bacda;
 }
 
 .attribution a {
-  color: #3e52a3;
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
