--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -9,11 +9,13 @@ body {
   background: #0d192b;
 }
 
-section {
+main {
   width: 100%;
   height: 100vh;
   display: -ms-grid;
   display: grid;
+  -ms-flex-line-pack: center;
+      align-content: center;
 }
 
 .card {
@@ -78,16 +80,16 @@ section {
 
 h1 {
   padding: 1rem 0;
+  font-size: 1.5rem;
 }
 
-h1 a {
+a {
   color: white;
   padding: 1rem 0;
-  font-weight: 700;
   text-decoration: none;
 }
 
-h1 a:hover {
+a:hover {
   color: #00fff7;
 }
 
